Made ValidateToken endpoint
