# internal/models/dtos/validate_token_dtos.go
@@ -1,0 +1,9 @@
+package dtos
+
+type ValidateTokenRequest struct {
+	Token string `json:"token"`
+}
+
+type ValidateTokenResponse struct {
+	IsValid bool `json:"is_valid"`
+}
